# hamster

./: .gitignore  Cargo.toml  README.md
data_in/: stress.txt
src/: color.rs  color_map.rs  dithering.rs  ham.rs  ham_encoding.rs  lib.rs
templates/: base.html.tera  ham_image.html.tera  index.html
