[package]
name = "hamster"
version = "0.1.0"
authors = ["Josua Schmid <josua.schmid@renuo.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = "0.1.3"
image = "0.23.4"

[[bin]]
name = "main"
path = "src/bin/main.rs"
