[package]
name = "hamster"
version = "0.1.0"
authors = ["Josua Schmid <josua.schmid@renuo.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = "0.1.3"
image = "0.23.4"
rocket = "0.4.4"
serde = "1.0.8"
serde_derive = "1.0.8"

[dependencies.rocket_contrib]
default_features = false
features = ["tera_templates", "serve"]

[[bin]]
name = "main"
path = "src/bin/main.rs"
